--- a/css/style.css
+++ b/css/style.css
@@ -585,7 +585,8 @@ body {
   width: 100%;
   height: 60px;
   background: linear-gradient(136.4deg, #FCFEFF 0%, #FFFFFF 102.56%);
-  box-shadow: 3px 3px 15px rgba(211, 209, 215, 0.6); }
+  box-shadow: 3px 3px 15px rgba(211, 209, 215, 0.6);
+  box-sizing: border-box; }
   .partners-item:nth-child(3) {
     padding: 0; }
   .partners-item img {
@@ -1034,30 +1035,30 @@ body {
     max-width: 253px;
     width: 100%;
     margin: 10px 0; }
-  .contact.single-contact .btn {
+  .contact-single .btn {
     color: #fff;
     background: linear-gradient(265.45deg, #155AA7 0%, #4095DE 27.59%, #241C52 101.88%); }
-  .contact.single-contact .contact-info {
+  .contact-single .contact-info {
     background: #fff; }
-  .contact.single-contact .sub-title {
+  .contact-single .sub-title {
     background-image: url(../images/sprite.svg#an_experience-sub-title__single); }
-  .contact.single-contact .contact-item {
+  .contact-single .contact-item {
     color: #221952; }
-    .contact.single-contact .contact-item .line {
+    .contact-single .contact-item .line {
       background-color: #C4C4C4; }
-    .contact.single-contact .contact-item.phone .icon {
+    .contact-single .contact-item.phone .icon {
       background-image: url(../images/sprite.svg#icon-phone-single); }
-    .contact.single-contact .contact-item.mail .icon {
+    .contact-single .contact-item.mail .icon {
       background-image: url(../images/sprite.svg#icon-mail-single); }
-    .contact.single-contact .contact-item.map-item .icon {
+    .contact-single .contact-item.map-item .icon {
       background-image: url(../images/sprite.svg#icon-map-single); }
-    .contact.single-contact .contact-item.instagram .icon {
+    .contact-single .contact-item.instagram .icon {
       background-image: url(../images/sprite.svg#icon-instagram-single); }
-    .contact.single-contact .contact-item.facebook .icon {
+    .contact-single .contact-item.facebook .icon {
       background-image: url(../images/sprite.svg#icon-facebook-single); }
-    .contact.single-contact .contact-item.youtube .icon {
+    .contact-single .contact-item.youtube .icon {
       background-image: url(../images/sprite.svg#youtube-light); }
-  .contact.single-contact .title {
+  .contact-single .title {
     color: #221952; }
 
 /* ---  Section Contact End  --- */
@@ -1151,7 +1152,7 @@ body {
         font: 600 18px/32px "FiraSans-Bold";
         letter-spacing: 0.05em;
         color: #221952;
-        padding-left: 25px; }
+        padding: 10px 0 10px 25px; }
         .uniqueness-info .info .text span {
           font-weight: 400;
           font-family: "FiraSans-Regular";
@@ -1501,7 +1502,8 @@ body {
   .partners-list {
     max-width: 100%; }
   .partners-item {
-    max-width: 100px; }
+    max-width: 132px;
+    height: 80px; }
 
   .post-more__info-title {
     font-size: 20px;
@@ -1519,11 +1521,13 @@ body {
     padding: 50px 67px; }
 
   .partners-list {
-    max-width: 100%;
+    max-width: calc(100% + 20px);
     flex-wrap: wrap;
     justify-content: flex-start;
-    margin: 10px 0; }
+    overflow: hidden;
+    margin: 10px 0 10px -10px; }
   .partners-item {
+    max-width: 120px;
     margin: 5px 10px; }
 
   .news-item {
@@ -1675,6 +1679,8 @@ body {
     padding: 25px; }
   .contact .map {
     width: 100%; }
+  .contact-single .contact-body {
+    flex-direction: column; }
 
   .section_one__info-item, .section_one__info-logo {
     height: 180px; }
@@ -1832,15 +1838,18 @@ body {
     .uniqueness-body {
       border-radius: 0;
       flex-direction: column;
-      position: relative; }
+      position: relative;
+      min-height: auto; }
       .uniqueness-body .bg {
         width: 100%;
         position: absolute;
         height: 404px; }
+    .uniqueness-inner {
+      height: auto; }
     .uniqueness-info {
       width: 100%;
       padding: 75px 15px 0;
-      min-height: 870px; }
+      min-height: 1065px; }
       .uniqueness-info .description {
         padding-top: 300px;
         line-height: 24px;
@@ -1879,8 +1888,6 @@ body {
         min-height: auto; }
       .uniqueness-single .title {
         text-align: center; }
-      .uniqueness-single .description {
-        padding-top: 250px; }
       .uniqueness-single .uniqueness-inner {
         height: auto; }
       .uniqueness-single .uniqueness-body {
@@ -1953,7 +1960,8 @@ body {
     overflow-y: unset;
     height: auto; }
   .services-inner {
-    padding: 80px 0; }
+    padding: 80px 0;
+    min-height: auto; }
   .services-title {
     width: 320px; }
   .services-img {
@@ -1983,6 +1991,10 @@ body {
     .contact-info .sub-title {
       margin: 0;
       background-image: url(../images/sprite.svg#an_experience-sub-title__light-mob); }
+    .contact-inner {
+      height: auto; }
+    .contact-body {
+      height: auto; }
 
   .news-list {
     justify-content: center; }
