--- a/css/style.css
+++ b/css/style.css
@@ -1727,6 +1727,9 @@ body {
   .description {
     font-size: 14px;
     line-height: 22px; }
+    .description span.bold {
+      font-size: 16px;
+      line-height: 32px; }
 
   .title {
     font-size: 24px;
@@ -1880,6 +1883,11 @@ body {
           text-align: center;
           letter-spacing: 0.05em;
           padding: 0 10px; }
+          .uniqueness-info .info .text.text-media {
+            font-size: 18px; }
+            .uniqueness-info .info .text.text-media span {
+              display: block;
+              font-size: 14px; }
     .uniqueness-inner {
       padding: 80px 0; }
     .uniqueness-single {
@@ -2021,6 +2029,50 @@ body {
     height: auto;
     opacity: 1;
     visibility: visible;
-    padding-top: 10px; } }
+    padding-top: 10px; }
+
+  .company > .description {
+    padding-top: 0; }
+    .company > .description:nth-child(1) {
+      padding-top: 300px; }
+
+  .list-shadow__link {
+    font-size: 12px;
+    line-height: 14.4px; }
+  .list-shadow__item {
+    margin: 5px 3px; }
+    .list-shadow__item.no-shadow {
+      display: none; }
+
+  .d-flex {
+    flex-direction: column; }
+    .d-flex img {
+      max-width: 160px;
+      margin: 20px 0; }
+    .d-flex .description {
+      padding-top: 0; }
+    .d-flex .right {
+      padding-left: 0; }
+      .d-flex .right.media-center {
+        text-align: center; }
+
+  .shadow {
+    padding: 16px; }
+    .shadow .description {
+      padding-top: 0;
+      margin: 0; }
+
+  .sincerely {
+    text-align: center;
+    min-height: 101px;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .sincerely::before {
+      background: linear-gradient(180deg, #221952 0%, rgba(255, 255, 255, 0) 100%);
+      height: 101px; }
+    .sincerely .description {
+      padding-top: 0;
+      max-width: 80%; } }
 
 /*# sourceMappingURL=style.css.map */
