--- a/css/style.scss
+++ b/css/style.scss
@@ -2427,6 +2427,12 @@ body {
   .description {
     font-size: 14px;
     line-height: 22px;
+    span{
+      &.bold{
+        font-size: 16px;
+        line-height: 32px;
+      }
+    }
   }
 
   .title {
@@ -2667,6 +2673,13 @@ body {
           text-align: center;
           letter-spacing: 0.05em;
           padding: 0 10px;
+          &.text-media{
+            font-size: 18px;
+            span{
+              display: block;
+              font-size: 14px;
+            }
+          }
         }
       }
     }
@@ -2935,6 +2948,71 @@ body {
         visibility: visible;
         padding-top: 10px;
       }
+    }
+  }
+
+  .company {
+   > .description{
+      &:nth-child(1){
+        padding-top: 300px;
+      }
+
+      padding-top: 0;
+    }
+  }
+  .list-shadow{
+    &__link{
+      font-size: 12px;
+      line-height: 14.4px;
+    }
+    &__item{
+      margin: 5px 3px;
+      &.no-shadow{
+        display: none;
+      }
+    }
+  }
+  .d-flex{
+    flex-direction: column;
+    img{
+      max-width: 160px;
+      margin: 20px 0;
+    }
+    .description{
+
+      padding-top: 0;
+    }
+    .right{
+      padding-left: 0;
+      &.media-center{
+        text-align: center;
+
+      }
+    }
+  }
+
+  .shadow{
+    padding: 16px;
+    .description{
+      padding-top: 0;
+      margin: 0;
+    }
+  }
+
+  .sincerely{
+    &::before{
+      background: linear-gradient(180deg, #221952 0%, rgba(255, 255, 255, 0) 100%);
+      height: 101px;
+    }
+
+    text-align: center;
+    min-height: 101px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .description{
+      padding-top: 0;
+      max-width: 80%;
     }
   }
 }
