--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,8 @@ body {
     height: 0;
     opacity: 0;
     visibility: hidden;
-    transition: height, padding-top 0.5s ease, opacity, visibility 1s ease; }
+    transition: height, padding-top 0.5s ease, opacity, visibility 1s ease;
+    overflow: hidden; }
   .accordion-active .accordion-btn {
     background-image: url(../images/sprite.svg#accordion-minus); }
   .accordion-active .accordion-head {
@@ -919,13 +920,14 @@ body {
     padding: 100px 0; }
     .services-single .services-inner {
       padding: 0; }
-    .services-single .services-body {
-      height: 80vh;
-      overflow-y: scroll;
-      scrollbar-width: none;
-      /* Firefox */ }
-      .services-single .services-body::-webkit-scrollbar {
-        display: none; }
+    @media screen and (min-width: 768px) {
+      .services-single .services-body {
+        height: 80vh;
+        overflow-y: scroll;
+        scrollbar-width: none;
+        /* Firefox */ }
+        .services-single .services-body::-webkit-scrollbar {
+          display: none; } }
 
 /* ---  Section Services End  --- */
 /* --- Section Contact Start --- */
@@ -1961,12 +1963,9 @@ body {
   .services,
   .services .fp-tableCell {
     min-height: 2440px; }
-  .services-single,
-  .services-single .fp-tableCell {
-    min-height: auto; }
-  .services-single .services-body {
-    overflow-y: unset;
-    height: auto; }
+  .services-single {
+    min-height: 100vh;
+    box-sizing: border-box; }
   .services-inner {
     padding: 80px 0;
     min-height: auto; }
@@ -2031,9 +2030,9 @@ body {
     visibility: visible;
     padding-top: 10px; }
 
-  .company > .description {
+  .company .description {
     padding-top: 0; }
-    .company > .description:nth-child(1) {
+    .company .description:nth-child(1) {
       padding-top: 300px; }
 
   .list-shadow__link {
