--- a/css/style.css
+++ b/css/style.css
@@ -1282,18 +1282,20 @@ body {
     box-sizing: border-box; }
   .post-info {
     width: 65%;
-    height: 80vh;
     text-align: left;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     padding: 60px 67px 15px;
-    box-sizing: border-box;
-    overflow-y: scroll;
-    scrollbar-width: none;
-    /* Firefox */ }
-    .post-info::-webkit-scrollbar {
-      display: none; }
+    box-sizing: border-box; }
+    @media screen and (min-width: 1001px) {
+      .post-info {
+        height: 80vh;
+        overflow-y: scroll;
+        scrollbar-width: none;
+        /* Firefox */ }
+        .post-info::-webkit-scrollbar {
+          display: none; } }
     .post-info .title {
       text-align: left;
       margin: 10px 0; }
@@ -1397,13 +1399,15 @@ body {
         display: none; }
   .post-more {
     width: 35%;
-    margin-top: 75px;
-    height: 70vh;
-    overflow-y: scroll;
-    scrollbar-width: none;
-    /* Firefox */ }
-    .post-more::-webkit-scrollbar {
-      display: none; }
+    margin-top: 75px; }
+    @media screen and (min-width: 1001px) {
+      .post-more {
+        height: 70vh;
+        overflow-y: scroll;
+        scrollbar-width: none;
+        /* Firefox */ }
+        .post-more::-webkit-scrollbar {
+          display: none; } }
     .post-more__title {
       font: 600 24px/40px "FiraSans-Bold";
       letter-spacing: 0.05em;
@@ -1697,19 +1701,26 @@ body {
   .post-body {
     padding-right: 0;
     flex-direction: column;
-    height: 85vh;
-    display: block; }
+    height: 80vh;
+    display: block;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    /* Firefox */ }
+    .post-body::-webkit-scrollbar {
+      display: none; }
   .post-more {
+    margin-top: 0;
     width: 100%;
-    height: 85vh;
-    padding: 0 22.5px 0 45px; }
+    height: auto;
+    padding: 0 22.5px 0 45px;
+    box-sizing: border-box; }
     .post-more__info-title {
       font-size: 16px;
       line-height: 20px; }
   .post-info {
     width: 100%;
     padding: 35px;
-    height: 85vh; }
+    height: auto; }
   .post .title {
     font-size: 24px;
     line-height: 28px; } }
@@ -1722,6 +1733,7 @@ body {
   .scroll {
     display: none; }
 
+  .post .wrapper,
   .advantages.advantages-single .wrapper,
   .wrapper {
     max-width: 100vw; }
@@ -1732,6 +1744,8 @@ body {
     .description span.bold {
       font-size: 16px;
       line-height: 32px; }
+    .description.dark {
+      text-align: center; }
 
   .title {
     font-size: 24px;
@@ -2072,6 +2086,66 @@ body {
       height: 101px; }
     .sincerely .description {
       padding-top: 0;
-      max-width: 80%; } }
+      max-width: 80%; }
+
+  .post::before {
+    content: unset; }
+  .post .title {
+    font-size: 18px;
+    line-height: 28px; }
+  .post .info {
+    position: relative;
+    background: transparent;
+    padding-top: 100px;
+    display: block;
+    padding-left: 0;
+    padding-top: 85px; }
+    .post .info::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(180deg, rgba(64, 149, 222, 0.2) 0%, rgba(255, 255, 255, 0) 100%);
+      left: 0;
+      top: 45px; }
+    .post .info .info-logo {
+      position: absolute;
+      left: 50%;
+      top: 0;
+      transform: translate(-50%, 0);
+      height: 56px; }
+    .post .info .text {
+      font: 600 14px/22px "FiraSans-Bold";
+      text-align: center;
+      letter-spacing: 0.05em;
+      padding: 0 10px; }
+      .post .info .text.text-media {
+        font-size: 18px; }
+        .post .info .text.text-media span {
+          display: block;
+          font-size: 14px; }
+  .post-more__title {
+    font-size: 18px;
+    line-height: 21.6px; }
+  .post-more__img {
+    max-width: 64px;
+    min-height: 64px; }
+  .post-more__description {
+    display: none; }
+  .post-more__info {
+    padding-left: 16px; }
+    .post-more__info-title {
+      font-size: 14px;
+      line-height: 22px; }
+  .post .content .calendar {
+    margin: 10px 0 0; }
+  .post .content .description {
+    margin: 10px 0; }
+
+  .calendar {
+    font-size: 14px;
+    padding-left: 30px; }
+    .calendar::before {
+      transform: translateY(-50%) scale(0.7); } }
 
 /*# sourceMappingURL=style.css.map */
