--- a/css/style.scss
+++ b/css/style.scss
@@ -146,7 +146,6 @@ body {
     .description {
       &:nth-child(1) {
         margin-top: 0;
-        //box-shadow: ;
       }
     }
   }
@@ -274,14 +273,12 @@ body {
     font: 400 18px/32px $regular;
     letter-spacing: 0.05em;
     color: #221952;
-    //padding-top: 20px;
     height: 0;
     opacity: 0;
     visibility: hidden;
     transition: height, padding-top 0.5s ease,
     opacity, visibility 1s ease;
     overflow: hidden;
-    //@include transition();
   }
 
 
@@ -712,7 +709,6 @@ body {
     margin: 0 auto;
     font: 400 22px/40px $regular;
     letter-spacing: 0.05em;
-    //padding: 3vh 0;
   }
 
   &__info {
@@ -1052,7 +1048,6 @@ body {
 
     .advantages-inner {
       max-height: 80vh;
-      //height: 3000px;
       min-height: auto;
       box-shadow: 5px 5px 25px #d3d1d7, -5px -5px 25px #ffffff;
       overflow-y: auto;
@@ -1190,7 +1185,6 @@ body {
           display: none;
         }
       }
-
     }
   }
 }
@@ -1709,17 +1703,20 @@ body {
 
   &-info {
     width: 65%;
-    height: 80vh;
     text-align: left;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     padding: 60px 67px 15px;
     box-sizing: border-box;
-    overflow-y: scroll;
-    scrollbar-width: none; /* Firefox */
-    &::-webkit-scrollbar {
-      display: none;
+
+    @media screen and (min-width: 1001px) {
+      height: 80vh;
+      overflow-y: scroll;
+      scrollbar-width: none; /* Firefox */
+      &::-webkit-scrollbar {
+        display: none;
+      }
     }
 
     .title {
@@ -1877,13 +1874,15 @@ body {
   &-more {
     width: 35%;
     margin-top: 75px;
-    height: 70vh;
-    overflow-y: scroll;
-    scrollbar-width: none; /* Firefox */
-    &::-webkit-scrollbar {
-      display: none;
-    }
 
+    @media screen and (min-width: 1001px) {
+      height: 70vh;
+      overflow-y: scroll;
+      scrollbar-width: none; /* Firefox */
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
     &__title {
       font: 600 24px/40px $bold;
       letter-spacing: 0.05em;
@@ -2380,14 +2379,21 @@ body {
     &-body {
       padding-right: 0;
       flex-direction: column;
-      height: 85vh;
+      height: 80vh;
       display: block;
+      overflow-y: scroll;
+      scrollbar-width: none; /* Firefox */
+      &::-webkit-scrollbar {
+        display: none;
+      }
     }
 
     &-more {
+      margin-top: 0;
       width: 100%;
-      height: 85vh;
+      height: auto;
       padding: 0 22.5px 0 45px;
+      box-sizing: border-box;
 
       &__info-title {
         font-size: 16px;
@@ -2398,7 +2404,7 @@ body {
     &-info {
       width: 100%;
       padding: 35px;
-      height: 85vh;
+      height: auto;
     }
 
     .title {
@@ -2422,7 +2428,7 @@ body {
   .scroll {
     display: none;
   }
-
+  .post .wrapper,
   .advantages.advantages-single .wrapper,
   .wrapper {
     max-width: 100vw;
@@ -2436,6 +2442,9 @@ body {
         font-size: 16px;
         line-height: 32px;
       }
+    }
+    &.dark{
+      text-align: center;
     }
   }
 
@@ -2659,7 +2668,6 @@ body {
           width: 100%;
           height: 100%;
           background: linear-gradient(180deg, rgba(#4095DE, 0.2) 0%, rgba(255, 255, 255, 0) 100%);
-          //transform: rotate(90deg);
           left: 0;
           top: 45px;
         }
@@ -2826,16 +2834,6 @@ body {
     &-single {
       min-height: 100vh;
       box-sizing: border-box;
-
-    //  &,
-    //  .fp-tableCell {
-    //    min-height: auto;
-    //  }
-    //
-    //  .services-body {
-    //    overflow-y: unset;
-    //    height: auto;
-    //  }
     }
 
     &-inner {
@@ -3022,6 +3020,93 @@ body {
     .description{
       padding-top: 0;
       max-width: 80%;
+    }
+  }
+  .post{
+    &::before{
+      content: unset;
+    }
+    .title{
+      font-size: 18px;
+      line-height: 28px;
+    }
+
+    .info {
+      position: relative;
+      background: transparent;
+      padding-top: 100px;
+      display: block;
+      padding-left: 0;
+      padding-top: 85px;
+      &::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(#4095DE, 0.2) 0%, rgba(255, 255, 255, 0) 100%);
+        left: 0;
+        top: 45px;
+      }
+
+      .info-logo {
+        position: absolute;
+        left: 50%;
+        top: 0;
+        transform: translate(-50%, 0);
+        height: 56px;
+      }
+
+      .text {
+        font: 600 14px/22px $bold;
+        text-align: center;
+        letter-spacing: 0.05em;
+        padding: 0 10px;
+        &.text-media{
+          font-size: 18px;
+          span{
+            display: block;
+            font-size: 14px;
+          }
+        }
+      }
+    }
+    &-more{
+      &__title{
+        font-size: 18px;
+        line-height: 21.6px;
+      }
+      &__img{
+        max-width: 64px;
+        min-height: 64px;
+      }
+      &__description{
+        display: none;
+      }
+      &__info{
+        padding-left: 16px;
+        &-title{
+          font-size: 14px;
+          line-height: 22px;
+        }
+      }
+    }
+    //&-inner{
+    //  margin-top: 40px;
+    //}
+    .content {
+      .calendar{
+        margin: 10px 0 0;
+      }
+      .description{
+        margin: 10px 0;
+      }
+    }
+  }
+  .calendar{
+    font-size: 14px;
+    padding-left: 30px;
+    &::before{
+      transform: translateY(-50%) scale(0.7);
     }
   }
 }
