--- a/css/style.css
+++ b/css/style.css
@@ -142,9 +142,16 @@ body {
   letter-spacing: 0.1em;
   color: #FFFFFF;
   margin: 0 auto;
-  cursor: pointer; }
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease; }
   .btn:focus {
     outline: none; }
+  .btn:hover {
+    background: linear-gradient(285.45deg, #155AA7 0%, #4095DE 27.59%, #241C52 101.88%); }
 
 .scroll {
   max-width: 24px;
@@ -517,6 +524,59 @@ body {
     font: bold 18px/40px "FiraSans-Bold";
     letter-spacing: 0.05em; }
 
+#fp-nav {
+  position: fixed;
+  top: 50%;
+  right: 0;
+  z-index: 9; }
+  #fp-nav ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column; }
+    #fp-nav ul li {
+      max-width: 100%;
+      width: 100%;
+      height: 32px;
+      margin: 10px 0;
+      font-size: 0;
+      display: flex;
+      align-items: center;
+      box-sizing: border-box;
+      -webkit-transition: all 0.3s ease;
+      -ms-transition: all 0.3s ease;
+      -moz-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      transition: all 0.3s ease; }
+      #fp-nav ul li a {
+        position: relative;
+        min-width: 64px;
+        min-height: 64px;
+        display: block; }
+        #fp-nav ul li a::before {
+          content: "";
+          position: absolute;
+          max-width: 64px;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          background-color: transparent;
+          background-image: url(../images/nav-item.png);
+          background-repeat: no-repeat;
+          background-position: center center; }
+        #fp-nav ul li a.active::before {
+          background-image: url(../images/nav-item__active.svg); }
+  #fp-nav.active ul li a::before {
+    background-image: url(../images/nav-item-light.svg); }
+  #fp-nav.active ul li a.active::before {
+    background-image: url(../images/nav-item__active.svg); }
+  #fp-nav.active-fz {
+    max-width: 350px;
+    width: 100%; }
+    #fp-nav.active-fz ul li {
+      font: bold 18px/40px "FiraSans-Bold";
+      letter-spacing: 0.05em; }
+
 .hamburger {
   max-width: 64px;
   width: 100%;
@@ -647,7 +707,7 @@ body {
   margin: 15px 0; }
 
 .show-mobile {
-  display: none; }
+  display: none !important; }
 
 /* --- Section_one Start --- */
 .section_one {
@@ -1035,10 +1095,9 @@ body {
     justify-content: space-between; }
     .contact-body .map {
       width: calc(100% - 500px);
-      height: 100%;
-      background-image: url(../images/map.png);
+      height: 75vh;
       background-repeat: no-repeat;
-      background-position: right;
+      background-position: center;
       background-size: cover; }
   .contact-info {
     width: 500px;
@@ -1112,6 +1171,8 @@ body {
     max-width: 253px;
     width: 100%;
     margin: 10px 0; }
+    .contact .btn:hover {
+      background: #EEEEF1; }
   .contact-single .btn {
     color: #fff;
     background: linear-gradient(265.45deg, #155AA7 0%, #4095DE 27.59%, #241C52 101.88%); }
@@ -1830,8 +1891,8 @@ body {
     font-size: 24px;
     line-height: 28px; }
 
-  .contact-header.show-mobile {
-    display: flex; }
+  .contact-info.show-mobile {
+    display: block !important; }
 
   .no__show-mobile {
     display: none !important; } }
@@ -1931,6 +1992,10 @@ body {
   .section_one {
     overflow: hidden;
     min-height: 568px; }
+    .section_one .wrapper {
+      padding: 0; }
+    .section_one .btn {
+      max-width: calc(100% - 30px); }
     .section_one .fp-tableCell {
       min-height: 568px; }
     .section_one-inner {
@@ -1942,13 +2007,22 @@ body {
       font-size: 14px;
       line-height: 22px; }
     .section_one__info {
-      background-color: transparent;
       overflow-x: auto;
-      min-width: 540px; }
+      width: 100%;
+      justify-content: flex-start;
+      padding: 0 10px;
+      box-sizing: border-box;
+      background: transparent;
+      margin-right: 0;
+      scrollbar-width: none;
+      /* Firefox */ }
+      .section_one__info::-webkit-scrollbar {
+        display: none; }
       .section_one__info-item {
         flex-direction: column;
         padding: 0;
-        min-width: 260px; }
+        min-width: 260px;
+        background: linear-gradient(90deg, rgba(46, 59, 73, 0.5) 0%, rgba(46, 59, 73, 0) 100%); }
         .section_one__info-item:nth-child(1) {
           flex-direction: column;
           margin-right: 20px; }
@@ -2144,13 +2218,16 @@ body {
       min-height: 350px; }
     .contact-info .sub-title {
       margin: 0;
-      background-image: url(../images/sprite.svg#an_experience-sub-title-mob); }
+      background-image: url(../images/sprite.svg#an_experience-sub-title__light-mob); }
     .contact-info .contact-header {
       display: flex; }
     .contact-inner {
       height: auto; }
     .contact-body {
       height: auto; }
+
+  .contact-single .sub-title {
+    background-image: url(../images/sprite.svg#an_experience-sub-title-mob); }
 
   .news-list {
     justify-content: center; }
@@ -2299,14 +2376,26 @@ body {
     overflow-y: hidden !important; }
 
   .show-mobile {
-    display: block; }
+    display: block !important; }
 
   .news-list.video-list {
     padding: 0; }
     .news-list.video-list .news-item {
       padding: 8px; }
 
+  .news-list {
+    padding: 0 20px; }
+
   .advantages.advantages-single.advantages-video .advantages-inner {
-    height: auto; } }
+    height: auto; }
+
+  #fp-nav {
+    display: none !important; }
+
+  .nav__menu.show-mobile {
+    display: none !important; }
+
+  .nav.active .nav__menu.show-mobile {
+    display: flex !important; } }
 
 /*# sourceMappingURL=style.css.map */
